--- a/index.html
+++ b/index.html
@@ -58,13 +58,13 @@
             <div id="sidebar-menu" class="main_menu_side hidden-print main_menu">
               <div class="menu_section active">
                 <ul class="nav side-menu" style="">
-                  <li class="active"><a href="index.html"><i class="fa fa-map-marker"></i> Vessel Location Alert <span class="fa fa-chevron-down"></span></a>
+                  <li class="active"><a href="index.html"><i class="fa fa-map-marker"></i> Vessel Location Alert</a>
 
                   </li>
-                  <li><a href="vesselTradePattern.html"><i class="fa fa-ship"></i> Vessel Trade Pattern <span class="fa fa-chevron-down"></span></a>
+                  <li><a href="vesselTradePattern.html"><i class="fa fa-ship"></i> Vessel Trade Pattern</a>
 
                   </li>
-                  <li><a href="commodityTracker.html"><i class="fa fa-bullseye"></i> Commodity Tracker <span class="fa fa-chevron-down"></span></a>
+                  <li><a href="commodityTracker.html"><i class="fa fa-bullseye"></i> Commodity Tracker</a>
 
                   </li>
                   <li><a><i class="fa fa-codiepie"></i> Voyage Economy <span class="fa fa-chevron-down"></span></a>
