--- a/dailyPerformance.html
+++ b/dailyPerformance.html
@@ -70,7 +70,7 @@
                   <li><a><i class="fa fa-codiepie"></i> Voyage Economy <span class="fa fa-chevron-down"></span></a>
                     <ul class="nav child_menu" style="display:none;">
                       <li><a href="dailyPerformance.html">Daily Performance</a></li>
-                      <li><a href="">Vessel Performance</a></li>
+                      <li><a href="vesselPerformance.html">Vessel Performance</a></li>
                       <li><a href="">Fleet Performance</a></li>
                     </ul>
                   </li>
