--- a/index.html
+++ b/index.html
@@ -68,9 +68,9 @@
 
                   </li>
                   <li><a><i class="fa fa-codiepie"></i> Voyage Economy <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu" style="display:none;">
+                    <ul class="nav child_menu" style="display:none !important;">
                       <li><a href="dailyPerformance.html">Daily Performance</a></li>
-                      <li><a href="">Vessel Performance</a></li>
+                      <li><a href="vesselPerformance.html">Vessel Performance</a></li>
                       <li><a href="">Fleet Performance</a></li>
                     </ul>
                   </li>
@@ -115,7 +115,7 @@
                     </ul>
                   </li>
                   <li><a><i class="fa fa-crosshairs"></i>Bahri General Cargo <span class="fa fa-chevron-down"></span></a>
-                    <ul class="nav child_menu" style="display:none;">
+                    <ul class="nav child_menu" style="display:none !important;">
                       <li><a href="">BGC Overview</a></li>
                       <li><a href="">BGC Financial</a></li>
                       <li><a href="">BGC Operational</a></li>
